# pacman-rs

./: .envrc  .gitignore  README.md  flake.nix  index.html  package.json  vite.config.js
.github/workflows/: ci.yml
.idx/: dev.nix
game/: Cargo.toml
game/src/: entities.rs  lib.rs  maze.rs  state.rs
src/: App.vue
src/assets/: main.css
src/components/: ArcadeMachine.vue  ArcadeScene.vue  ArcadeScreen.vue  GameCanvas.vue  GameMenu.vue  LoadingScreen.vue  PacmanCabinet.vue  arcadeRoom.js
src/router/: index.js
src/stores/: arcadeModel.js
src/views/: ArcadeMachineView.vue  GameView.vue  LandingView.vue
