[package]
name = "pacman-game"
version = "0.1.0"
edition = "2021"
description = "Pac-Man game logic compiled to WebAssembly"

[lib]
# cdylib → produces a .wasm binary for wasm-pack
# rlib   → allows `cargo test` to run natively (not through wasm)
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size — important for WASM download speed
opt-level = "s"
lto = true
